--- a/src/components/ui/radio/Radio.module.scss
+++ b/src/components/ui/radio/Radio.module.scss
@@ -3,8 +3,8 @@
   z-index: 0;
 
   display: flex;
-  flex-direction: column;
-  gap: 12px;
+  // flex-direction: column;
+  gap: 16px;
 }
 
 .itemContainer {
