--- a/src/components/ui/typography/Typography.module.scss
+++ b/src/components/ui/typography/Typography.module.scss
@@ -9,6 +9,9 @@
   font-weight: $fontWeight;
   line-height: $lineHeight;
   font-family: var(--font-rubik);
+
+  background-color: transparent;
+  border: none;
   @media (max-width: $mobile) {
     font-family: var(--font-onest);
   }
@@ -91,8 +94,23 @@
   }
 }
 
+.body_7 {
+  @include typography(14px, 19.6px, 600);
+  @media (max-width: $mobile) {
+    @include typography(14px, 19.6px, 600);
+  }
+}
+
+.body_8 {
+  @include typography(13px, 18.2px, 400);
+  @media (max-width: $mobile) {
+    @include typography(13px, 18.2px, 400);
+  }
+}
+
 .button {
   @include typography(20px, 28px, 400);
+  cursor: pointer;
   @media (max-width: $mobile) {
     @include typography(20px, 28px, 500);
   }
@@ -100,6 +118,13 @@
 
 .textfield {
   @include typography(16px, 18.96px, 400);
+  @media (max-width: $mobile) {
+    @include typography(16px, 22.4px, 400);
+  }
+} 
+
+.price_sale {
+  @include typography(16px, 22.4px, 400);
   @media (max-width: $mobile) {
     @include typography(16px, 22.4px, 400);
   }
