feat: add profile page

--- a/src/components/header/header-navigation/HeaderNavigation.module.scss
+++ b/src/components/header/header-navigation/HeaderNavigation.module.scss
@@ -36,7 +36,8 @@
     margin-right: 12px;
 }
 
-.profileLink {
+.profileButton {
+    cursor: pointer;
     height: 33px;
     width: 171px;
     margin-left: 12px;
