--- a/src/components/ui/select/Select.module.scss
+++ b/src/components/ui/select/Select.module.scss
@@ -9,21 +9,21 @@
 
 .trigger {
   cursor: pointer;
-
+  
   display: flex;
   align-items: center;
   justify-content: space-between;
-
+  
   width: 100%;
   height: 58px;
   padding: 16px 18px;
-
+  
   text-align: center;
 
   border: 1px solid #2125311A;
   border-radius: 4px;
   background-color: var(--color-bg);
-
+  
   &:disabled {
     opacity: 0.5;
   }
@@ -32,7 +32,7 @@
     transform: rotate(180deg);
     transition: all 0.2s ease-in-out;
   }
-
+  
   &[data-state='closed'] .icon {
     transition: all 0.3s ease-in-out;
   }
@@ -44,40 +44,40 @@
     font-weight: 400;
     line-height: 21.33px;
     @media (max-width: $mobile) {
-        font-family: var(--font-onest);
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 22.4px;
+      font-family: var(--font-onest);
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 22.4px;
     }
   }
 }
 
 .triggerSecondary {
   cursor: pointer;
-
+  
   display: flex;
   align-items: center;
   gap: 5px;
   width: 100%;
-
+  
   text-align: center;
-
+  
   border: none;
   border-radius: 4px;
-
+  
   &:disabled {
     opacity: 0.5;
   }
-
+  
   &[data-state='open'] .icon {
     transform: rotate(180deg);
     transition: all 0.2s ease-in-out;
   }
-
+  
   &[data-state='closed'] .icon {
     transition: all 0.3s ease-in-out;
   }
-
+  
   &[data-placeholder] {
     color: var(--color-grey-3);
     font-family: var(--font-rubik);
@@ -85,21 +85,22 @@
     font-weight: 400;
     line-height: 21.33px;
     @media (max-width: $mobile) {
-        font-family: var(--font-onest);
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 22.4px;
+      font-family: var(--font-onest);
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 22.4px;
     }
   }
 }
 
 .content {
+  z-index: 1000;
   width: var(--radix-select-trigger-width);
   max-height: var(--radix-select-content-available-height);
   padding: 18px 16px;
-
   border-radius: 4px;
   border: 1px solid #2125311A;
+  background-color: var(--color-bg);
 
   animation: fade-in 0.5s ease;
 }
