--- a/src/features/Product/product-images/ProductImages.module.scss
+++ b/src/features/Product/product-images/ProductImages.module.scss
@@ -11,19 +11,19 @@
     overflow-y: scroll;
 
     &::-webkit-scrollbar{
-        width: 5px; /* Ширина вертикального скролла */
+        width: 5px; 
     }
     
     &::-webkit-scrollbar-thumb{
-        background-color: var(--color-grey-4); /* Цвет бегунка */
+        background-color: var(--color-grey-4);
         border-radius: 4px;
         &:hover {
-            background-color: var(--color-grey-2); /* Цвет бегунка */
+            background-color: var(--color-grey-2);
         }
     }
 
     &::-webkit-scrollbar-track{
-        background-color: transparent; /* Цвет фона */
+        background-color: transparent;
         border-radius: 4px;
     }
 }
