feat: add password textfield variant, add textarea and refactor

--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -36,12 +36,15 @@
     }
 }
 .categoryes {
-    color: var(--color-bg);
     width: 261px;
-
+    
     display: flex;
     flex-direction: column;
     gap: 24px;
+    
+    & > h4, p {
+        color: var(--color-bg);
+    }
 }
 
 .categoryesContainer {
