--- a/src/components/feedback-form/FeedbackForm.module.scss
+++ b/src/components/feedback-form/FeedbackForm.module.scss
@@ -36,4 +36,10 @@
     display: flex;
     align-items: center;
     gap: 20px;
+
+    & > div > label {
+        color: var(--color-grey-1) !important;
+        opacity: 0.8;
+        width: 160px;
+    }
 }
