--- a/src/features/About/advantages/Advantages.module.scss
+++ b/src/features/About/advantages/Advantages.module.scss
@@ -8,6 +8,27 @@
     align-items: center;
 }
 
+.aboutUs {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        width: 856px;
+        margin-bottom: 72px;
+        
+        & > h1 {
+            margin-bottom: 32px;
+        }
+    
+        & > p {
+            margin-bottom: 24px;
+        }
+    
+        & > img {
+            border-radius: 6px;
+        }
+}
+
 .cardsContainer {
     display: flex;
     flex-wrap: wrap;
