--- a/src/features/Home/home-page/HomePage.module.scss
+++ b/src/features/Home/home-page/HomePage.module.scss
@@ -1,8 +1,8 @@
-.container{
-    width: 1296px;
-    margin: 0 auto;
-    
+.container{   
     display: flex;
     flex-direction: column;
     gap: 140px;
+
+    margin-top: 24px;
+    margin-bottom: 140px;
 }
