--- a/src/features/Payment/payment-page/PaymentPage.module.scss
+++ b/src/features/Payment/payment-page/PaymentPage.module.scss
@@ -1,11 +1,9 @@
 .container {
-    width: 1296px;
-    margin: 0 auto;
-
     display: flex;
     flex-direction: column;
     gap: 36px;
 
+    margin-bottom: 140px;
     & > h1 {
         text-align: center;
     }
