--- a/src/features/Profile/my-addresses/MyAddresses.module.scss
+++ b/src/features/Profile/my-addresses/MyAddresses.module.scss
@@ -15,6 +15,16 @@
     }
 }
 
+.radioAddress {
+    & > div {
+        height: 143px;
+        width: 460px;
+        & > div {
+            max-width: 100%;
+        }
+    }
+}
+
 .button {
     width: 230px;
     height: 58px;
