feat: add category and product query

--- a/src/assets/icons/logo/Logo.module.scss
+++ b/src/assets/icons/logo/Logo.module.scss
@@ -2,6 +2,8 @@
     display: inline-flex;
     align-items: center;
     gap: 15px;
+
+    text-decoration: none;
 }
 .text {
     border-left: 2px solid var(--color-accent-orange);
