--- a/src/components/product-catalog/ProductCatalog.module.scss
+++ b/src/components/product-catalog/ProductCatalog.module.scss
@@ -2,6 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 .sort {
