--- a/src/features/Catalog/active-category/ActiveCategory.module.scss
+++ b/src/features/Catalog/active-category/ActiveCategory.module.scss
@@ -2,8 +2,8 @@
     position: absolute;
     left: 306px;
     box-sizing: border-box;
+    height: 100%;
     width: 990px;
-    height: 623px;
     padding: 24px 32px;
 
     display: flex;
@@ -16,37 +16,5 @@
 .contentContainer {
     display: flex;
     gap: 95px;
-}
-
-.elem {
-    min-width: 195px;
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-
-    & > ul {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-        & > li {
-            position: relative; /* Обеспечиваем позиционирование для маркера */
-            padding-left: 16px;
-            &::before {
-                box-sizing: border-box;
-                content: "";
-                position: absolute;
-                top: 50%;
-                left: 0;
-                transform: translateY(-50%) rotate(45deg);
-                width: 7px;
-                height: 7px;
-                background-color: var(--color-accent-orange);
-                border-radius: 1px;
-              }
-        }
-    }
+    flex-wrap: wrap;
 }
