--- a/src/components/header/header-navigation/HeaderNavigation.module.scss
+++ b/src/components/header/header-navigation/HeaderNavigation.module.scss
@@ -62,3 +62,8 @@
         color: var(--color-accent-orange);
     }
 }
+
+.active {
+    color: var(--color-text);
+    text-decoration: underline;
+}
