--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -35,6 +35,18 @@
         line-height: 26.6px;
     }
 }
+
+.navLink{
+    color: var(--color-grey-2);
+    width: fit-content;
+    & > p {
+        color: var(--color-bg);
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 22.4px;
+    }
+}
+
 .categoryes {
     width: 261px;
     
