--- a/src/components/ui/checkbox/Checkbox.module.scss
+++ b/src/components/ui/checkbox/Checkbox.module.scss
@@ -1,4 +1,5 @@
 .container {
+  position: relative;
   display: flex;
   gap: 8px;
   align-items: center;
@@ -64,4 +65,11 @@
 
 .disabledIcon {
   color: var(--color-grey-1);
+}
+
+.errorMessage {
+  color: var(--color-accent-red);
+  position: absolute;
+  left: 0;
+  bottom: -20px;
 }
