--- a/src/components/ui/text-field/TextField.module.scss
+++ b/src/components/ui/text-field/TextField.module.scss
@@ -117,7 +117,9 @@
 }
 
 .errorMessage {
-  margin-top: 12px;
+  position: absolute;
+  bottom: -20px;
+  left: 0;
   color: var(--color-accent-red);
 }
 
@@ -125,39 +127,3 @@
   cursor: default;
   color: #7D7D7D;
 }
-
-
-
-//разобраться
-.input:-webkit-autofill,
-.input:-webkit-autofill:focus,
-.input:-webkit-autofill:hover {
-  box-shadow: 0 0 0 30px var(--color-dark-500) inset;
-
-  -webkit-text-fill-color: var(--color-light-100);
-}
-
-.input input[type='search']::-webkit-search-cancel-button {
-  display: none;
-  appearance: none;
-}
-
-/* Chrome, Edge и Safari,
-Ensure consistent autofill styling in all states (hover, focus, active) */
-.input:-webkit-autofill,
-.input:-webkit-autofill:hover,
-.input:-webkit-autofill:active,
-.input:-webkit-autofill:focus {
-  --webkit-text-fill-color: var(--color-light-100);
-
-  background-color: var(--color-dark-900);
-  transition: background-color 3000s ease-in-out 0s;
-}
-
-.input.error:-webkit-autofill,
-.input.error:-webkit-autofill:hover,
-.input.error:-webkit-autofill:focus,
-.input.error:-webkit-autofill:active {
-  -webkit-text-fill-color: var(--color-danger-300);
-}
-
