--- a/src/features/Profile/edit-password-popup/EditPasswordPopup.module.scss
+++ b/src/features/Profile/edit-password-popup/EditPasswordPopup.module.scss
@@ -15,9 +15,11 @@
     transform: translate(-50%, -50%);
     z-index: 1000;
     
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
+    & > form {
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+    }
 
     width: 416px;
     max-height: 100vh;
