--- a/src/components/search/Search.module.scss
+++ b/src/components/search/Search.module.scss
@@ -41,6 +41,11 @@
     }
 }
 
+.inputSearch {
+    width: 685px;
+    height: 50px;
+}
+
 .categoryContainer {
     display: flex;
     flex-direction: column;
