--- a/src/components/company-contacts/CompanyContacts.module.scss
+++ b/src/components/company-contacts/CompanyContacts.module.scss
@@ -28,11 +28,12 @@
 
 .map {
     height: 478px;
-    width: 636px;
+    width: 100%;
+    border-radius: 6px;
+    overflow: hidden;
     @media (max-width: 768px) {
         height: 220px;
         width: 336px;
-        border-radius: 6px;
         overflow: hidden;
     }
 }
