--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -97,6 +97,13 @@
     display: flex;
     flex-direction: column;
     gap: 12px;
+    & > a {
+        color: var(--color-bg);
+        text-decoration: none;
+        &:hover {
+            color: var(--color-accent-orange);
+        }
+    }
     @media (max-width: 768px) {
         gap: 8px;
     }
