--- a/src/features/Payment/additional-services/AdditionalServices.module.scss
+++ b/src/features/Payment/additional-services/AdditionalServices.module.scss
@@ -34,3 +34,9 @@
     margin-top: 24px;
     flex-direction: column;
 }
+.options {
+    margin-top: 24px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
