--- a/src/features/ShoppingCart/shopping-cart-page/ShoppingCartPage.module.scss
+++ b/src/features/ShoppingCart/shopping-cart-page/ShoppingCartPage.module.scss
@@ -64,7 +64,7 @@
     gap: 20px;
 
     width: 306px;
-    height: 282px;
+    height: fit-content;
     padding: 32px 24px;
 
     border: 1px solid #2125314D;
