feat: change query

--- a/src/components/item/Item.module.scss
+++ b/src/components/item/Item.module.scss
@@ -69,7 +69,7 @@
     color: #21253126;
 }
 
-.favorite {
+.active {
     color: var(--color-accent-red);
 }
 
@@ -90,7 +90,7 @@
     align-items: center;
     gap: 8px;
     margin-bottom: 12px;
-    & > h3 {
+    & > .discount {
         color: var(--color-accent-red);
     }
     & > span {
