--- a/src/features/RegularCustomer/regular-customer-content/RegularCustomerContent.module.scss
+++ b/src/features/RegularCustomer/regular-customer-content/RegularCustomerContent.module.scss
@@ -34,6 +34,11 @@
     & > h4 {
         width: 248px;
     }
+
+    &:hover {
+        cursor: pointer;
+        background-color: var(--color-grey-1);
+    }
 }
 
 .iconCategory {
