--- a/src/components/best-selling-products/BestSellingProducts.module.scss
+++ b/src/components/best-selling-products/BestSellingProducts.module.scss
@@ -2,12 +2,12 @@
     display: flex;
     flex-direction: column;
     gap: 32px;
-
+    
     & > h2 {
         text-align: center;
     }
-}
-.productContainer {
-    display: flex;
-    gap: 24px;
+
+    @media (max-width: 768px) {
+        gap: 24px;
+    }
 }
