--- a/src/components/catalog-with-banners/CatalogWithBanners.module.scss
+++ b/src/components/catalog-with-banners/CatalogWithBanners.module.scss
@@ -30,8 +30,17 @@
         grid-template-rows: auto auto; /* Две строки */
         grid-template-columns: 1fr 1fr; /* Два столбца */
         gap: 12px;
-        & > img:first-child {
+        & > a:first-child {
             grid-column: span 2; /* Занимает две колонки */
         }
     }
+}
+
+.discountLink{
+    border-radius: 6px;
+    overflow: hidden;
+}
+
+.image{
+    border-radius: 6px;
 }
