--- a/src/components/discount/Discount.module.scss
+++ b/src/components/discount/Discount.module.scss
@@ -3,12 +3,16 @@
     flex-direction: column;
     gap: 20px;
     width: fit-content;
+    @media (max-width: 768px) {
+        gap: 12px;
+    }
 }
 .content {
     display: flex;
     flex-direction: column;
     align-items: start;
     gap: 12px;
+    
     & > h3{
         @media (max-width: 768px) {
             text-align: left;
@@ -17,6 +21,9 @@
             line-height: 26.6px;    
         }
     }
+    @media (max-width: 768px) {
+        gap: 8px;
+    }
 }
 .data {
     display: inline;
@@ -24,4 +31,8 @@
     border-radius: 4px;
     background-color: var(--color-accent-orange);
     color: var(--color-bg);
+}
+
+.image {
+    border-radius: 6px;
 }
