--- a/src/components/header-mobile/HeaderMobile.module.scss
+++ b/src/components/header-mobile/HeaderMobile.module.scss
@@ -8,10 +8,14 @@
 
 .info {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     padding-bottom: 13px;
     border-bottom: 1px solid #21253126;
+}
+
+.selectLanguage {
+    margin-left: 30px;
+    margin-right: 10px;
 }
 
 .phoneContainer {
