--- a/src/components/item/Item.module.scss
+++ b/src/components/item/Item.module.scss
@@ -116,3 +116,11 @@
     font-weight: 400;
     line-height: 22.4px;
 }
+
+.buttonHorizontal{
+    @media (max-width: 768px) {
+        padding: 0;
+        width: 36px;
+        height: 36px;
+    }
+}
