--- a/src/components/product-catalog/ProductCatalog.module.scss
+++ b/src/components/product-catalog/ProductCatalog.module.scss
@@ -3,8 +3,6 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    overflow-x: auto;
-    overflow-y: hidden;
     margin: 0 auto;
     @media (max-width: 768px) {
         width: 336px;
@@ -34,12 +32,13 @@
     }
 }
 
+.mobileContainer {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 32px 16px;
+}
+
 button.active {
     color: var(--color-bg);
     background-color: var(--color-accent-orange);
-}
-
-.itemsContainer {
-    display: flex;
-    gap: 24px;
 }
