--- a/src/components/subcategory/Subcategory.module.scss
+++ b/src/components/subcategory/Subcategory.module.scss
@@ -9,15 +9,11 @@
     justify-content: center;
     align-items: center ;
     text-align: center;
+    text-decoration: none;
 
     box-shadow: 2px 3px 7px 0px #2225310D;
-}
 
-.light {
-    color: var(--color-text);
-    background-color: var(--color-bg);
-}
-.orange {
-    color: var(--color-bg);
-    background-color: var(--color-accent-orange);
+    @media (max-width: 768px) {
+        width: 160px;
+    }
 }
