--- a/src/components/ui/accordion/Accordion.module.scss
+++ b/src/components/ui/accordion/Accordion.module.scss
@@ -57,9 +57,9 @@
 
 .container {
   display: flex;
-  flex-direction: column;
   gap: 16px;
   margin-top: 16px;
+  flex-wrap: wrap;
 }
 
 @keyframes slideDown {
