--- a/src/components/ui/pagination/Pagination.module.scss
+++ b/src/components/ui/pagination/Pagination.module.scss
@@ -3,7 +3,6 @@
     justify-content: center;
     align-items: center;
     gap: 20px;
-    margin-top: 20px;
 }
 
 .button {
@@ -28,11 +27,12 @@
     border: none;
     border-radius: 4px;
     background-color: transparent;
-
-}
-.active {
-    color: var(--color-bg);
-    background-color: var(--color-text);
+    &.active {
+        background-color: var(--color-text);
+        & > span {
+            color: var(--color-bg);
+        }
+    }
 
 }
 .icon {
