--- a/src/features/Product/product-images/ProductImages.module.scss
+++ b/src/features/Product/product-images/ProductImages.module.scss
@@ -2,6 +2,11 @@
     display: flex;
     gap: 24px;
     height: 416px;
+
+    @media (max-width: 768px) {
+        flex-direction: column-reverse;
+        gap: 12px;
+    }
 }
 .imagesContainer {
     display: flex;
@@ -9,6 +14,11 @@
     gap: 12px;
     
     overflow-y: scroll;
+
+    @media (max-width: 768px) {
+        flex-direction: row;
+        overflow-x: auto;
+    }
 
     &::-webkit-scrollbar{
         width: 5px; 
@@ -37,6 +47,7 @@
     object-fit: cover;
     border: 1px solid var( --color-grey-4);
     border-radius: 6px;
+    cursor: pointer;
 }
 
 .tagsContainer {
@@ -54,15 +65,15 @@
         border-radius: 4px;
         color: var(--color-bg);
 
-        &:nth-child(1){
+        &.promotion{
             background-color: var(--color-accent-red);
         }
         
-        &:nth-child(2){
+        &.new{
             background-color: var(--color-accent-green);
         }
         
-        &:nth-child(3){
+        &.popular{
             background-color: var(--color-accent-blue);
 
         }
