--- a/src/features/Product/product-info/ProductInfo.module.scss
+++ b/src/features/Product/product-info/ProductInfo.module.scss
@@ -7,6 +7,10 @@
 .head {
     display: flex;
     gap: 48px;
+
+    @media (max-width: 768px) {
+        flex-direction: column;
+    }
 }
 .infoContainer {
     width: 320px;
@@ -14,6 +18,9 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    @media (max-width: 768px) {
+        width: 336px;
+    }
 }
 .info {
     display: flex;
@@ -37,12 +44,16 @@
     flex-direction: column;
 
     width: 354px;
-    height: 291px;
     padding: 24px;
 
     border-radius: 6px;
     background-color: var(--color-bg);
     box-shadow: 6px 12px 13px 0px #2225310A;
+
+    @media (max-width: 768px) {
+        width: 336px;
+        padding: 24px 16px;
+    }
 }
 .price {
     display: flex;
@@ -57,6 +68,9 @@
         opacity: 0.6;
         text-decoration: line-through;
     }
+    & .priceValue {
+        color: var(--color-text);
+    }
 }
 
 .buttonsContainer {
@@ -65,6 +79,12 @@
     gap: 12px;
     & > button {
         height: 58px;
+    }
+
+    @media (max-width: 768px) {
+        & > button {
+            height: 42px;
+        }
     }
 }
 
@@ -75,6 +95,15 @@
 .iconButton{
     width: 58px;
     color: var(--color-text);
+
+    @media (max-width: 768px) {
+        width: 42px;
+        padding: 0;
+    }
+}
+
+.active {
+    color: var(--color-accent-red);
 }
 
 .description{
