--- a/src/features/Product/product-page/ProductPage.module.scss
+++ b/src/features/Product/product-page/ProductPage.module.scss
@@ -1,9 +1,24 @@
+.wrapper {
+    display: flex;
+    flex-direction: column;  
+
+    @media (max-width: 768px) {
+        width: 336px;
+        margin: 0 auto 72px;
+    }
+}
+
 .container {
     display: flex;
     flex-direction: column;
     gap: 140px;
 
     margin-bottom: 140px;
+
+    @media (max-width: 768px) {
+        width: 336px;
+        gap: 72px;
+    }
 }
 
 .title {
@@ -21,4 +36,9 @@
 .content {
     display: flex;
     gap: 48px;
+
+    @media (max-width: 768px) {
+        flex-direction: column;
+        gap: 32px;
+    }
 }
