--- a/src/features/Products/products-filter/ProductsFilter.module.scss
+++ b/src/features/Products/products-filter/ProductsFilter.module.scss
@@ -7,6 +7,10 @@
     & > h3 {
         text-align: center;
     }
+
+    @media (max-width: 768px) {
+        width: 336px;
+    }
 }
 
 .resetFilter {
@@ -22,4 +26,9 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    width: 129px;
+}
+
+.checkbox{
+    width: 242px;
 }
