feat: add ssr from category and subcategory

--- a/src/features/ShoppingCart/shopping-cart-item-row/ShoppingCartItemRow.module.scss
+++ b/src/features/ShoppingCart/shopping-cart-item-row/ShoppingCartItemRow.module.scss
@@ -19,3 +19,11 @@
 .trashButton {
     outline: none   ;
 }
+
+.discountPrice {
+    color: var(--color-accent-red);
+}
+.oldPrice {
+    color: var(--color-grey-2);
+    text-decoration: line-through;
+}
