--- a/src/components/catalog-home/CatalogHome.module.scss
+++ b/src/components/catalog-home/CatalogHome.module.scss
@@ -27,6 +27,9 @@
     background-color: var(--color-grey-1);
     border-bottom: 1px solid #7D7D7D33;
     text-decoration: none;
+    & > svg {
+        margin-left: auto;
+    }
     &:hover {
         background-color: var(--color-text);
         & > p {
