--- a/src/components/yandexMap/YandexMap.module.scss
+++ b/src/components/yandexMap/YandexMap.module.scss
@@ -18,9 +18,9 @@
   }
   
   .mapIframe {
-    width: 100%; /* iframe займет всю ширину контейнера */
-    height: 100%; /* iframe займет всю высоту контейнера */
-    border: none; /* Убираем границу */
+    width: 100%; 
+    height: 100%; 
+    border: none;
     position: absolute;
     top: 0;
     left: 0;
