feat:add ssr from about page and change tag logic on 3 pages

--- a/src/features/Profile/profile-page/ProfilePage.module.scss
+++ b/src/features/Profile/profile-page/ProfilePage.module.scss
@@ -30,7 +30,8 @@
     align-items: center;
     text-align: left;
     gap: 12px;
-
+    
+    text-decoration: none;
     border-radius: 6px;
     padding: 16px 12px;
     & > h4 {
