--- a/src/components/feedback-form/FeedbackForm.module.scss
+++ b/src/components/feedback-form/FeedbackForm.module.scss
@@ -41,11 +41,13 @@
 }
 
 .inputsContainer{
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    
     gap: 24px;
-
+    
     @media (max-width: 768px) {
-        flex-direction: column;
+        grid-template-columns: repeat(1, 1fr);
         gap: 12px;
     }
 
