--- a/src/features/DeliveryAndPayment/delivery-and-payment/DeliveryAndPayment.module.scss
+++ b/src/features/DeliveryAndPayment/delivery-and-payment/DeliveryAndPayment.module.scss
@@ -20,7 +20,8 @@
     display: flex;
     align-items: center;
     gap: 12px;
-
+    text-decoration: none;
+    
     border-radius: 6px;
     padding: 16px 12px;
     & > h4 {
