--- a/src/components/feedback-form/FeedbackForm.module.scss
+++ b/src/components/feedback-form/FeedbackForm.module.scss
@@ -56,13 +56,7 @@
     display: flex;
     align-items: center;
     gap: 20px;
-
-    & > div > label {
-        color: var(--color-grey-1) !important;
-        opacity: 0.8;
-        width: 160px;
-    }
-
+    
     @media (max-width: 768px) {
         flex-direction: column-reverse;
         align-items: start;
@@ -70,5 +64,7 @@
     }
 }
 .checkbox {
-    width: 100% !important;
+    color: var(--color-grey-1);
+    width: 100% ;
+    opacity: 0.8;
 }
