--- a/src/components/ui/checkbox/Checkbox.module.scss
+++ b/src/components/ui/checkbox/Checkbox.module.scss
@@ -1,3 +1,7 @@
+.wrapper {
+  display: flex;
+  flex-direction: column;
+}
 .container {
   position: relative;
   display: flex;
@@ -109,8 +113,5 @@
 
 .errorMessage {
   color: var(--color-accent-red);
-  position: absolute;
-  left: 0;
-  bottom: -15px;
   text-wrap: nowrap;
 }
