--- a/src/components/burger-menu/BurgerMenu.module.scss
+++ b/src/components/burger-menu/BurgerMenu.module.scss
@@ -55,6 +55,10 @@
     color: var(--color-accent-orange);
   }
 
+  .accordion_item{
+    text-decoration: none;
+  }
+
   .dropdown {
     display: flex;
     gap: 5px;
