--- a/src/features/ShoppingCart/request-discount-popup/RequestDiscountPopup.module.scss
+++ b/src/features/ShoppingCart/request-discount-popup/RequestDiscountPopup.module.scss
@@ -32,6 +32,15 @@
     & > h3 {
         text-align: center;
         margin-bottom: 20px;
+        @media (max-width: 768px) {
+            margin-bottom: 4px;
+        }
+    }
+
+    @media (max-width: 768px) {
+        width: 336px;
+        padding: 46px 16px;   
+        gap: 20px;
     }
 
     &::-webkit-scrollbar{
@@ -58,6 +67,13 @@
     gap: 12px;
     & > button {
         width: 230px;
+    }
+
+    @media (max-width: 768px) {
+        flex-direction: column;
+        & > button {
+            width: 100%;
+        }
     }
 }
 
